--- a/index.html
+++ b/index.html
@@ -11,12 +11,197 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marhey:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+            },
+            fontFamily: {
+              marhey: "'Marhey', cursive",
+            }
+          }
+        }
+      }
+    </script>
   </head>
   <body>
+    <header class="fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-marhey text-white md:pt-12">
+      <h1 class="font-marhey font-bold text-center py-4 text-5xl">Game Night/ Family Home Evening</h1>
+      <h2 class="font-semibold text-3xl text-yellow-200">All Singles 31+ Invited</h2>
+      <nav class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1">
+        <a href="#about" class="smooth-scroll text-sm md:text-lg  hover:text-yellow-200">About</a>
+        <a href="#upcoming" class="smooth-scroll text-sm md:text-lg  hover:text-yellow-200">Next Event</a>
+        <a href="#map" class="smooth-scroll text-sm md:text-lg  hover:text-yellow-200">Map</a>
+        <a href="#past-events" class="smooth-scroll text-sm md:text-lg  hover:text-yellow-200">Past Events</a>
+      </nav>
+    </header>
+
+    <main class="w-full mx-auto min-h-screen pt-48 md:pt-52 flex flex-col items-center justify-center">
+      <div class="bg-cover bg-center bg-no-repeat w-full py-24 lg:py-36 px-4"
+        style="background-image: url('./static/images/game-background.jpg');">
+        <div class="container mx-auto">
+          <section
+            id="about"
+            class="mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/80 to-gray-600/80 text-white rounded shadow text-lg flex flex-col items-start justify-start space-y-2 md:space-y-4 md:text-xl"
+          >
+            <p class="leading-loose"><span class="font-bold text-yellow-200 text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
+            <p class="leading-loose"><span class="font-bold text-red-400 text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
+            <p class="leading-loose"><span class="font-bold text-green-400 text-2xl md:text-3xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
+            <p class="leading-loose"><span class="font-bold text-blue-400 text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
+              of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow">Lindon Stake Center</a>:
+            1050 E 100 N, Lindon</p>
+            <p class="leading-loose"><span class="font-bold text-orange-400 text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
+            <p class="leading-loose"><span class="font-bold text-purple-400 text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
+            <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
+            <p class="leading-loose">The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+          </section>
+        </div>
+      </div>
+
+
+      <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
+        <h3 class="font-bold text-3xl text-center pt-8 pb-4">The Next One!</h3>
+        <p class="pb-4 text-yellow-400">Monday, December 12, 2022</p>
+        <div class="w-full mx-auto max-w-6xl shadow rounded">
+          <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022" class="rounded" />
+        </div>
+
+      </section>
+
+      <section id="map" class="overflow-x-auto flex flex-col items-center justify-center pt-24">
+        <h3 class="font-bold text-3xl text-center py-8 text-green-600">Map</h3>
+        <div class="md:hidden">
+          <!-- MOBILE MAP -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3041.1071011779986!2d-111.69369328420719!3d40.33997007937409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d850cea441f1f%3A0x9e55e0f29a813774!2s1050%20E%20100%20N%20St%2C%20Lindon%2C%20UT%2084042!5e0!3m2!1sen!2sus!4v1669354596186!5m2!1sen!2sus"
+            width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+
+          <!-- DESKTOP MAP -->
+          <div class="hidden invisible md:visible md:block">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3041.1071011779986!2d-111.69369328420719!3d40.33997007937409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d850cea441f1f%3A0x9e55e0f29a813774!2s1050%20E%20100%20N%20St%2C%20Lindon%2C%20UT%2084042!5e0!3m2!1sen!2sus!4v1669354596186!5m2!1sen!2sus"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+      </section>
+
+      <div class="w-full bg-gray-100 mt-24 pb-24 px-4">
+      <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
+        <h3 class="font-bold text-3xl text-center py-8 text-orange-600">Past Events</h3>
+        <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
+        <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Oct 2022" />
+        <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Sept 2022" />
+        <img src="./static/images/FHE-Game-Night-VI-Aug-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Aug 2022" />
+        <img src="./static/images/game-night-july-2022.png" alt="Game Night/Family Home Evening for Singles 31+ July 2022" />
+        <img src="./static/images/Game-Night-june-2022.png"
+      alt="Game Night/Family Home Evening for Singles 31+ Jun 2022" />
+        <div class="flex flex-col items-center justify-center">
+        <img src="./static/images/game-night-may-2022.png" alt="Game Night/Family Home Evening for Singles 31+ May 2022" />
+        <p>May 2022</p>
+        </div>
+        <div class="flex flex-col items-center justify-center">
+        <img src="./static/images/game-night-apr-11-2022.JPG" alt="Game Night/Family Home Evening for Singles 31+ Apr 2022 AKA Casual Game Night the Sequel" />
+        <p>April 2022</p>
+        </div>
+        <div class="flex flex-col items-center justify-center">
+        <img src="./static/images/game-night-march-2022.jpeg"
+        alt="Game Night/Family Home Evening for Singles 31+ March 2022" />
+        <p>March 2022</p>
+        </div>
+        </section>
+        </div>
+    </main>
+
+    <footer class="bg-black py-10 text-center text-white font-semibold w-full">
+      <nav class="pt-2 flex items-center justify-center mb-4">
+        <a href="https://github.com/ethyl2" target="_blank" rel="noopener noreferrer"
+          class="p-1 rounded hover:bg-orange-400">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
+            focusable="false" width="1.73em" height="1.5em" style="
+                          -ms-transform: rotate(360deg);
+                          -webkit-transform: rotate(360deg);
+                          transform: rotate(360deg);
+                        " preserveAspectRatio="xMidYMid meet" viewBox="0 0 1227.825 1000">
+            <path
+              d="M1078.94-.985c-33.192-.491-110.295 10.777-239.027 96.936c-70.161-17.535-144.812-26.188-219.591-26.188c-82.278 0-165.425 10.448-242.965 31.719C192.534-24.605 110.955 1.234 110.955 1.234c-53.258 133.183-20.347 231.788-10.344 256.277C38.014 325.069-.2 411.338-.2 517.07c0 79.822 9.085 151.416 31.281 213.653c1.231 4.803.832 3.732 2.906 7.844c4.89 12.884 10.327 25.39 16.438 37.468c2.094 4.346 4 7.563 4 7.563c62.395 116.307 185.396 191.438 404.244 215.028l330.995.375c233.392-23.144 345.386-98.499 396.994-215.591l3.281-7.625c4.89-11.828 9.153-24.135 20.813-65.562c11.659-41.427 16.875-113.172 16.875-193.185c0-114.755-43.1-206.577-113.092-276.434c12.231-39.48 28.57-127.158-16.313-239.402c0 0-6.293-1.995-19.281-2.188zM818.1 420.133c53.893-.117 100.057 9.136 134.717 45.499v.031c43.369 45.541 68.749 100.525 68.749 159.778c0 276.658-177.932 284.183-397.4 284.183c-219.506 0-397.4-38.336-397.4-284.183c0-58.861 25.009-113.516 67.843-158.872c71.451-75.59 192.365-35.562 329.558-35.562c70.423-.011 136.564-10.75 193.935-10.875zm-408.807 81.468c-45.666 0-82.687 61.741-82.687 137.936c0 76.206 37.019 137.967 82.687 137.967c45.666 0 82.687-61.761 82.687-137.967c0-76.184-37.019-137.881-82.687-137.936zm443.649 0c-45.666 0-82.687 61.741-82.687 137.936c0 76.206 37.019 137.967 82.687 137.967c45.666 0 82.687-61.761 82.687-137.967c0-76.184-37.019-137.881-82.687-137.936z"
+              fill="white" />
+          </svg>
+          <span class="sr-only">GitHub</span>
+        </a>
+        <a href="https://twitter.com/ethyl22000" target="_blank" rel="noopener noreferrer"
+          class="p-1 rounded hover:bg-orange-400">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
+            focusable="false" width="1.5em" height="1.5em" style="
+                          -ms-transform: rotate(360deg);
+                          -webkit-transform: rotate(360deg);
+                          transform: rotate(360deg);
+                        " preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+            <path
+              d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23z"
+              fill="white" />
+          </svg>
+          <span class="sr-only">Twitter</span>
+        </a>
+        <a href="https://www.linkedin.com/in/heather-nuffer/" target="_blank" rel="noopener noreferrer"
+          class="p-1 rounded hover:bg-orange-400">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
+            focusable="false" width="1.5em" height="1.5em" style="
+                          -ms-transform: rotate(360deg);
+                          -webkit-transform: rotate(360deg);
+                          transform: rotate(360deg);
+                        " preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024">
+            <path
+              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM349.3 793.7H230.6V411.9h118.7v381.8zm-59.3-434a68.8 68.8 0 1 1 68.8-68.8c-.1 38-30.9 68.8-68.8 68.8zm503.7 434H675.1V608c0-44.3-.8-101.2-61.7-101.2c-61.7 0-71.2 48.2-71.2 98v188.9H423.7V411.9h113.8v52.2h1.6c15.8-30 54.5-61.7 112.3-61.7c120.2 0 142.3 79.1 142.3 181.9v209.4z"
+              fill="white" />
+            <span class="sr-only">LinkedIn</span>
+          </svg>
+        </a>
+        <a
+          class="p-1 rounded hover:bg-orange-400"
+          href="https://www.facebook.com/heather.nuffer"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <div class="w-6 h-6">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1.5em" height="1.5em">
+              <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+              <path fill="white"
+                d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z" />
+            </svg>
+          </div>
+        </a>
+      </nav>
+      <p class="text-tongue-pink">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
+    </footer>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <script src="" async defer></script>
+    <script>
+    // Add smooth scroll to anchor links
+    const links = document.querySelectorAll("a.smooth-scroll")
+    for (const link of links) {
+      link.addEventListener("click", linkClickHandler)
+    }
+
+    function linkClickHandler(e) {
+      e.preventDefault()
+      const href = this.getAttribute("href")
+      const section = document.querySelector(href)
+      const scrollTop = window.pageYOffset || document.documentElement.scrollTop
+      scroll({
+      top: (section.getBoundingClientRect().top + scrollTop) - 220,
+      behavior: "smooth"
+      })
+    }
+    </script>
   </body>
 </html>
