Adds more about

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             <p class="leading-loose"><span class="font-bold text-red-400 text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
             <p class="leading-loose"><span class="font-bold text-green-400 text-2xl md:text-3xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
             <p class="leading-loose"><span class="font-bold text-blue-400 text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
-              of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow">Lindon Stake Center</a>:
+              of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow" class="hover:text-yellow-200">Lindon Stake Center</a>:
             1050 E 100 N, Lindon</p>
             <p class="leading-loose"><span class="font-bold text-orange-400 text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
             <p class="leading-loose"><span class="font-bold text-purple-400 text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
             <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
-            <p class="leading-loose">The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+            <p class="leading-loose"><span class="font-bold text-red-400 text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+              <p><span class="font-bold text-blue-400 text-2xl md:text-3xl">How this started:</span> I was at an event for widows and widowers and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
           </section>
         </div>
       </div>
