Fixes spacing in about section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p class="leading-loose"><span class="font-bold text-purple-400 text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
             <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
             <p class="leading-loose"><span class="font-bold text-red-400 text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
-              <p><span class="font-bold text-blue-400 text-2xl md:text-3xl">How this started:</span> I was at an event for
+            <p class="leading-loose"><span class="font-bold text-blue-400 text-2xl md:text-3xl">How this started:</span> I was at an event for
                 <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
           </section>
         </div>
