Adds gradients to backgrounds

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
       </section>
 
-      <section id="contact" class="w-full py-8 bg-yellow-200">
+      <section id="contact" class="w-full py-8 bg-gradient-to-b from-yellow-300 to-yellow-200">
         <div class="container mx-auto px-4">
           <h3 class="font-bold text-3xl text-center py-8 text-black text-center">Contact Me</h3>
           <form
@@ -174,7 +174,7 @@
       </div>
     </main>
 
-    <footer class="bg-black py-10 text-center text-white font-semibold w-full">
+    <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
       <nav class="pt-2 flex items-center justify-center mb-4">
         <a href="https://github.com/ethyl2" target="_blank" rel="noopener noreferrer"
           class="p-1 rounded hover:bg-orange-400">
