Adds links to other groups

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <a href="#map" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Map</a>
         <a href="#contact" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Contact</a>
         <a href="#past-events" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Past Events</a>
+        <a href="#links" class="hidden md:inline smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
       </nav>
     </header>
 
@@ -171,6 +172,45 @@
             <p>March 2022</p>
           </div>
         </section>
+      </div>
+
+      <div class="py-24" id="links">
+        <h3 class="font-bold text-3xl text-center pb-8 text-orange-600">Links to Other Singles Groups</h3>
+        <div class="flex flex-col items-center justify-center container mx-auto space-y-4 px-4">
+          <a
+            href="https://utahsingleadults.org/"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
+          >Utah County Single Adults</a>
+
+          <a
+            href="https://www.timpfhe.org/"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
+          >Mount Timpanogos Singles</a>
+
+          <a href="https://www.facebook.com/groups/utahfriendsnodramagroup" target="_blank" rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+            Utah LDS Singles - Friends Group of No Drama (Facebook)
+          </a>
+
+          <a href="https://www.facebook.com/groups/the.ritz.utah" target="_blank" rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+            The Ritz (Facebook)
+          </a>
+
+          <a href="https://www.facebook.com/groups/569828349865763" target="_blank" rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
+          >
+            LDS Widows & Widowers - Events Group (Facebook)
+          </a>
+
+          <a href="https://www.facebook.com/groups/ldswwofutcounty" target="_blank" rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+            LDS Widows & Widowers - Utah County (Facebook)
+          </a>
       </div>
     </main>
 
