--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Singles 31+ Game Night/Family Home Evening</title>
-    <meta name="description" content="Information about the singles' game night/ family home evening">
+    <meta name="description" content="Information about the singles' game night/ family home evening held in Lindon, UT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
+    <meta property="og:image:alt" content="Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:url" content="ethyl2.github.io/game-night/">
+    <meta property="og:title" content="Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:description"
+      content="Information about the singles' game night/ family home evening held in Lindon, UT">
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
