Finishes resources page and adds link in index

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
     <header class="fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-marhey text-white md:pt-12">
       <h1 class="font-marhey font-bold text-center py-4 text-base sm:text-3xl md:text-4xl lg:text-5xl">Game Night/ Family Home Evening</h1>
       <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">All Singles 31+ Invited</h2>
-      <nav class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1">
-        <a href="#about" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">About</a>
-        <a href="#upcoming" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Next Event</a>
-        <a href="#map" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Map</a>
-        <a href="#contact" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Contact</a>
-        <a href="#past-events" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Past Events</a>
-        <a href="#links" class="hidden md:inline smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
+      <nav class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1 px-4">
+        <a href="#about" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">About</a>
+        <a href="#upcoming" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Next Event</a>
+        <a href="#map" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Map</a>
+        <a href="#contact" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Contact</a>
+        <a href="#past-events" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Past Events</a>
+        <a href="#links" class="hidden sm:inline smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Other Groups</a>
+        <a href="./resources.html" class="hidden md:inline text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Resources</a>
       </nav>
     </header>
 
@@ -280,7 +281,8 @@
           </div>
         </a>
       </nav>
-      <p class="text-tongue-pink">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
+      <a href="./resources.html" class="text-xs text-white hover:text-orange-400 md:hidden">Resources</a>
+      <p class="text-xs">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
     </footer>
 
     <script>
