--- a/resources.html
+++ b/resources.html
@@ -66,37 +66,60 @@
     </header>
 
     <main class="w-full mx-auto min-h-screen pt-48 md:pt-72 flex flex-col items-center justify-start">
-      <h3 class="font-marhey font-semibold text-sm md:text-3xl">Interested in hosting a game night?</h3>
+      <h3 class="font-marhey font-semibold text-lg md:text-3xl">Interested in hosting a game night?</h3>
+      <section class="flex flex-col items-center justify-center py-8 space-y-3">
+        <h4 class="font-marhey text-base md:text-2xl font-bold">Will it be a remote event?</h4>
+        <p class="text-sm md:text-lg font-bold mx-auto w-full max-w-xs text-center md:max-w-4xl">See my page about free games that can be played with a group online:</p>
+        <a 
+          href="https://ethyl2.github.io/fav-games/index.html" 
+          target="_blank"
+          class="font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-500 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200 flex"
+        >Favorite Free Online Games</a>
+      </section>
+        
 
-
-        Will it be a remote event? See my page about free games that can be played with a group online:
-        <a href="https://ethyl2.github.io/fav-games/index.html" target="_blank">Favorite Free Online Games</a>
-        Will it be in-person? Here are some games that you can play, without needing a board game or cards!
-        <div class="mx-auto w-full max-w-3xl bg-blue-100">
-        <ul>
+      <section class="flex flex-col items-center justify-center py-8 space-y-3">
+        <h4 class="font-marhey text-base md:text-2xl font-bold">Will it be in-person?</h4>
+        <p class="text-sm md:text-lg font-bold w-full max-w-xs md:max-w-4xl text-center"> Here are some games that you can play, without needing a board game or cards!</p>
+        <ul class="w-full mx-auto max-w-4xl flex flex-wrap items-center justify-center">
           <li>
-            <a href="https://ethyl2.github.io/fav-games/six-second-rule.html" target="_blank">Six Second Rule</a>
+            <a href="https://ethyl2.github.io/fav-games/six-second-rule.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            >Six Second Rule</a>
           </li>
           <li>
-            <a href="https://ethyl2.github.io/fav-games/adverb-game.html" target="_blank">Adverb Game</a>
+            <a href="https://ethyl2.github.io/fav-games/adverb-game.html" target="_blank"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            >Adverb Game</a>
           </li>
           <li>
-            <a href="https://ethyl2.github.io/fav-games/go-out-west.html" target="_blank">When I Go Out West...</a>
+            <a href="https://ethyl2.github.io/fav-games/go-out-west.html" target="_blank"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            >When I Go Out West...</a>
           </li>
           <li>
-            <a href="https://ethyl2.github.io/fav-games/smurf.html" target="_blank">The Smurf Game</a>
+            <a href="https://ethyl2.github.io/fav-games/smurf.html" target="_blank"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            >The Smurf Game</a>
           </li>
           <li>
-            <a href="https://ethyl2.github.io/fav-games/good-news-bad-news.html" target="_blank">The Good News/Bad News Game</a>
+            <a href="https://ethyl2.github.io/fav-games/good-news-bad-news.html" target="_blank"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            >The Good News/Bad News Game</a>
           </li>
           <li>
-            <a href="https://ethyl2.github.io/fav-games/whats-yours-like.html" target="_blank">What's Yours Like?</a>
+            <a href="https://ethyl2.github.io/fav-games/whats-yours-like.html" target="_blank"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+          >What's Yours Like?</a>
           </li>
           <li>
-            <a href="https://ethyl2.github.io/fav-games/same-word.html" target="_blank">Same Word</a>
+            <a href="https://ethyl2.github.io/fav-games/same-word.html" target="_blank"
+            class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200"
+            >Same Word</a>
           </li>
         </ul>
-      </div>
+      </section>
+      <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
     </main>
 
     <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
@@ -154,7 +177,7 @@
           </div>
         </a>
       </nav>
-      <p class="text-tongue-pink">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
+      <p class="text-xs">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
     </footer>
   </body>
 </html>
