Adds playlists to resources page

--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
       behavior: "smooth"
       })
     }
+
+    const currentYearSpan = document.getElementById('current-year')
+    currentYearSpan.textContent = new Date().getFullYear()
     </script>
   </body>
 </html>
