--- a/resources.html
+++ b/resources.html
@@ -54,29 +54,32 @@
       <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">Resources</h2>
       <nav
         class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1">
-        <a href="index.html#about" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">About</a>
-        <a href="index.html#upcoming" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Next Event</a>
-        <a href="index.html#map" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Map</a>
-        <a href="index.html#contact" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Contact</a>
-        <a href="index.html#past-events" class="smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Past
+        <a href="#games" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Games</a>
+        <a href="#playlists" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Playlists</a>
+        <a href="index.html#about" class="text-xs sm:text-sm md:text-lg  hover:text-yellow-200">About</a>
+        <a href="index.html#upcoming" class="text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Next Event</a>
+        <a href="index.html#map" class="hidden md:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Map</a>
+        <a href="index.html#contact" class="text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Contact</a>
+        <a href="index.html#past-events" class="hidden md:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Past
           Events</a>
         <a href="index.html#links"
-          class="hidden md:inline smooth-scroll text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
+          class="hidden md:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
+
       </nav>
     </header>
 
     <main class="w-full mx-auto min-h-screen pt-48 md:pt-72 flex flex-col items-center justify-start">
       <h3 class="font-marhey font-semibold text-lg md:text-3xl">Interested in hosting a game night?</h3>
-      <section class="flex flex-col items-center justify-center py-8 space-y-3">
+      <section id="games" class="flex flex-col items-center justify-center py-8 space-y-3">
         <h4 class="font-marhey text-base md:text-2xl font-bold">Will it be a remote event?</h4>
         <p class="text-sm md:text-lg font-bold mx-auto w-full max-w-xs text-center md:max-w-4xl">See my page about free games that can be played with a group online:</p>
-        <a 
-          href="https://ethyl2.github.io/fav-games/index.html" 
+        <a
+          href="https://ethyl2.github.io/fav-games/index.html"
           target="_blank"
           class="font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-500 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200 flex"
         >Favorite Free Online Games</a>
       </section>
-        
+
 
       <section class="flex flex-col items-center justify-center py-8 space-y-3">
         <h4 class="font-marhey text-base md:text-2xl font-bold">Will it be in-person?</h4>
@@ -120,6 +123,73 @@
         </ul>
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
+
+      <section id="playlists" class="pb-12 md:pb-48">
+        <h4 class="font-marhey text-base md:text-2xl font-bold text-center">Playlists!</h4>
+        <div class="w-full flex flex-wrap items-center justify-center">
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For National Ice Cream Month!?:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/62pygMAFVxd43PZsjnctKm?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For Back-to-School Time:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/5A7wJ9BYAj9Taf1GZKN7JM?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-4 md:p-8 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For Fall:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/6V9726IeUpGowYDz8DtiqT?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For Halloween Time:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/6v9nq8oEjzJaoUD5eyOWrH?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For Thanksgiving Time:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/6GEgf4S5FjE6SdjGdooFnF?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For More Thanksgiving Time:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/5rtwA89v3Q61VkfHEeGuiU?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For Christmastime:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/4VI0LZvGis3Td8Crx9N1v1?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+        </div>
+        <p class="pt-4 font-marhey text-sm md:text-xl font-bold text-center">More to Come</p>
+        <a class="pt-4 font-marhey text-sm md:text-xl font-bold text-center block hover:text-blue-800"
+          href="index.html#contact"
+          target="_blank"
+          >Send me your playlists!</a>
+      </section>
     </main>
 
     <footer class="bg-gradient-to-b from-black to-gray-700 py-10 text-center text-white font-semibold w-full">
@@ -179,5 +249,27 @@
       </nav>
       <p class="text-xs">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
     </footer>
+
+    <script>
+      // Add smooth scroll to anchor links
+      const links = document.querySelectorAll("a.smooth-scroll")
+      for (const link of links) {
+        link.addEventListener("click", linkClickHandler)
+      }
+
+      function linkClickHandler(e) {
+        e.preventDefault()
+        const href = this.getAttribute("href")
+        const section = document.querySelector(href)
+        const scrollTop = window.pageYOffset || document.documentElement.scrollTop
+        scroll({
+          top: (section.getBoundingClientRect().top + scrollTop) - 220,
+          behavior: "smooth"
+        })
+      }
+
+      const currentYearSpan = document.getElementById('current-year')
+      currentYearSpan.textContent = new Date().getFullYear()
+    </script>
   </body>
 </html>
