Adds new jan info

--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pt-8 pb-4">The Next One!</h3>
-        <p class="pb-4 text-yellow-400">Monday, December 12, 2022</p>
-        <div class="w-full mx-auto max-w-6xl shadow rounded">
-          <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022" class="rounded" />
-        </div>
+        <p class="pb-4 text-yellow-400">Monday, Jan 2, 2023</p>
+        <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night" class="w-full max-w-5xl rounded shadow-lg" />
       </section>
 
       <section id="map" class="overflow-x-auto flex flex-col items-center justify-center py-24">
@@ -159,6 +157,10 @@
       <div class="w-full bg-gray-100 py-24 px-4">
         <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
           <h3 class="font-bold text-3xl text-center py-8 text-orange-600">Past Events</h3>
+          <div class="w-full mx-auto max-w-6xl shadow rounded">
+            <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022"
+              class="rounded" />
+          </div>
           <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
           <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Oct 2022" />
           <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Sept 2022" />
