--- a/resources.html
+++ b/resources.html
@@ -8,12 +8,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Singles 31+ Game Night/Family Home Evening</title>
+    <title>Resources | Singles 31+ Game Night/Family Home Evening</title>
     <meta name="description"
       content="Information about the singles' game night/ family home evening held in Lindon, UT">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://ethyl2.github.io/game-night/static/images/game-night-og.png">
-    <meta property="og:image:alt" content="Singles 31+ Game Night/Family Home Evening">
+    <meta property="og:image:alt" content="Resources | Singles 31+ Game Night/Family Home Evening">
     <meta property="og:url" content="ethyl2.github.io/game-night/">
     <meta property="og:title" content="Singles 31+ Game Night/Family Home Evening">
     <meta property="og:description"
@@ -54,16 +54,18 @@
       <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">Resources</h2>
       <nav
         class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1">
-        <a href="#games" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Games</a>
-        <a href="#playlists" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Playlists</a>
-        <a href="index.html#about" class="text-xs sm:text-sm md:text-lg  hover:text-yellow-200">About</a>
-        <a href="index.html#upcoming" class="text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Next Event</a>
-        <a href="index.html#map" class="hidden md:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Map</a>
-        <a href="index.html#contact" class="text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Contact</a>
-        <a href="index.html#past-events" class="hidden md:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Past
+        <a href="#games" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg text-center hover:text-yellow-200">Games</a>
+        <a href="#playlists" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  text-center hover:text-yellow-200">Playlists</a>
+        <a href="#messages"
+          class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg text-center hover:text-yellow-200">Messages</a>
+        <a href="index.html#about" class="hidden md:inline text-xs sm:text-sm text-center xl:text-lg  hover:text-yellow-200">About</a>
+        <a href="index.html#upcoming" class="text-xs sm:text-sm xl:text-lg  text-center hover:text-yellow-200">Next Event</a>
+        <a href="index.html#map" class="hidden md:inline text-xs text-center sm:text-sm xl:text-lg  hover:text-yellow-200">Map</a>
+        <a href="index.html#contact" class="text-xs sm:text-sm xl:text-lg text-center hover:text-yellow-200">Contact</a>
+        <a href="index.html#past-events" class="hidden lg:inline text-center text-xs sm:text-sm xl:text-lg  hover:text-yellow-200">Past
           Events</a>
         <a href="index.html#links"
-          class="hidden md:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
+          class="hidden xl:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
 
       </nav>
     </header>
@@ -124,7 +126,7 @@
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
 
-      <section id="playlists" class="pb-12 md:pb-48">
+      <section id="playlists" class="pb-12">
         <h4 class="font-marhey text-base md:text-2xl font-bold text-center">Playlists!</h4>
         <div class="w-full flex flex-wrap items-center justify-center">
 
@@ -179,6 +181,14 @@
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium">For Christmastime:</p>
             <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/2zpDQgI917BXf7WvVl439v?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For More Christmastime:</p>
+            <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/4VI0LZvGis3Td8Crx9N1v1?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"></iframe>
@@ -189,6 +199,24 @@
           href="index.html#contact"
           target="_blank"
           >Send me your playlists!</a>
+      </section>
+
+      <section id="messages" class="flex flex-col items-center justify-center py-8 space-y-3 md:pt-24 md:pb-48 bg-gray-100 w-full">
+        <h4 class="font-marhey text-base md:text-2xl font-bold">Ideas for the Spiritual Thought/Message</h4>
+        <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
+        <h5 class="font-marhey text-sm md:text-xl font-bold">December</h5>
+        <p class="px-4 text-center text-xs md:text-base">We decided to channel Buddy the Elf and spread Christmas cheer, 'by singing loud for all to hear!'</p>
+        <p class="px-4 text-center text-xs md:text-base">Instead of a spoken spiritual thought, we sang an energetic Christmas carol
+          <a href="https://www.churchofjesuschrist.org/music/library/hymns/far-far-away-on-judeas-plains?lang=eng" target="_blank" rel="noopener noreferrer nofollow"
+            class="text-green-700 hover:text-green-800">Far, Far Away on Judea's Plains</a>.
+        </p>
+        <a href="https://www.printables4mom.com/printable-elf-quote-art-print/"
+          rel="noopener noreferrer nofollow"
+          target="_blank"
+          class="flex items-center justify-center w-1/2 lg:w-1/4 mx-auto"
+        >
+          <img src="./static/images/buddy-the-elf.jpeg" alt="Buddy the Elf quote"/>
+        </a>
       </section>
     </main>
 
