Updates text in messages section

--- a/resources.html
+++ b/resources.html
@@ -206,7 +206,7 @@
         <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
         <h5 class="font-marhey text-sm md:text-xl font-bold">December</h5>
         <p class="px-4 text-center text-xs md:text-base">We decided to channel Buddy the Elf and spread Christmas cheer, 'by singing loud for all to hear!'</p>
-        <p class="px-4 text-center text-xs md:text-base">Instead of a spoken spiritual thought, we sang an energetic Christmas carol
+        <p class="px-4 text-center text-xs md:text-base">Instead of a spoken spiritual thought, we sang the energetic Christmas carol
           <a href="https://www.churchofjesuschrist.org/music/library/hymns/far-far-away-on-judeas-plains?lang=eng" target="_blank" rel="noopener noreferrer nofollow"
             class="text-green-700 hover:text-green-800">Far, Far Away on Judea's Plains</a>.
         </p>
