--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pt-8 pb-4">The Next One!</h3>
-        <p class="pb-4 text-yellow-400">Monday, Jan 2, 2023</p>
-        <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night" class="w-full max-w-5xl rounded shadow-lg" />
+        <p class="pb-4 text-yellow-400">Monday, Feb 6, 2023</p>
+        <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023" class="w-full max-w-4xl rounded shadow-lg" />
       </section>
 
       <section id="map" class="overflow-x-auto flex flex-col items-center justify-center py-24">
@@ -157,6 +157,10 @@
       <div class="w-full bg-gray-100 py-24 px-4">
         <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
           <h3 class="font-bold text-3xl text-center py-8 text-orange-600">Past Events</h3>
+          <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+            <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night"
+              class="w-full max-w-5xl rounded shadow-lg" />
+          </div>
           <div class="w-full mx-auto max-w-6xl shadow rounded">
             <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022"
               class="rounded" />
