Adds January resources

--- a/resources.html
+++ b/resources.html
@@ -212,19 +212,69 @@
       <section id="messages" class="flex flex-col items-center justify-center py-8 space-y-3 md:pt-24 md:pb-48 bg-gray-100 w-full">
         <h4 class="font-marhey text-base md:text-2xl font-bold">Ideas for the Spiritual Thought/Message</h4>
         <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
-        <h5 class="font-marhey text-sm md:text-xl font-bold">December</h5>
-        <p class="px-4 text-center text-xs md:text-base">We decided to channel Buddy the Elf and spread Christmas cheer, 'by singing loud for all to hear!'</p>
-        <p class="px-4 text-center text-xs md:text-base">Instead of a spoken spiritual thought, we sang the energetic Christmas carol
-          <a href="https://www.churchofjesuschrist.org/music/library/hymns/far-far-away-on-judeas-plains?lang=eng" target="_blank" rel="noopener noreferrer nofollow"
-            class="text-green-700 hover:text-green-800">Far, Far Away on Judea's Plains</a>.
-        </p>
-        <a href="https://www.printables4mom.com/printable-elf-quote-art-print/"
-          rel="noopener noreferrer nofollow"
-          target="_blank"
-          class="flex items-center justify-center w-1/2 lg:w-1/4 mx-auto"
-        >
-          <img src="./static/images/buddy-the-elf.jpeg" alt="Buddy the Elf quote"/>
-        </a>
+
+        <div class="flex flex-col items-center justify-center space-y-4 pt-4 px-4">
+          <h5 class="font-marhey text-sm md:text-xl font-bold">January</h5>
+          <p class="px-4 text-center text-xs md:text-base">Well, we were snowed out, darn it, but here's what I'd wanted to share & discuss:</p>
+          <h6 class="font-marhey text-sm md:text-lg font-bold text-center">President Nelson's New Year 2023 Facebook Message</h6>
+          <p class="whitespace-pre-line p-4 shadow rounded bg-white text-sm md:text-base">"For me, deep-sea fishing has been infrequent but instructive. Success requires patience, persistence, and prayer.
+            As we begin this new year and make resolutions to improve things in our lives, these three requisites for successful
+            fishing can help us.
+
+            First, be patient. As with fishing, real change requires time—and often a lot of time. It is tempting to expect
+            immediate results and then become disappointed when things don't work out exactly as planned. This may be why the
+            Apostle Paul counseled us to “run with patience the race that is set before us” (Hebrews 12:1).
+
+            Second, be persistent. Keep at it, even when things get difficult. Push through the tough times, and realize that even
+            small victories mean you are having success. The Savior “waxed strong in spirit” (Luke 2:40) as He grew older. We too
+            can wax strong in spirit and in our talents and habits if we persevere.
+
+            Third, be prayerful. Call upon God for the strength you need as you labor diligently to become a better version of
+            yourself—a better disciple of Jesus Christ, a brighter light in the world. For “they that wait upon the Lord shall renew
+            their strength; they shall mount up with wings as eagles; they shall run, and not be weary; and they shall walk, and not
+            faint” (Isaiah 40:31).
+
+            Happy New Year, my dear friends. May the Lord bless us all as we endeavor to become more like Him."
+          </p>
+          <img src="./static/images/pres-nelson-fishing.jpeg" alt="President Nelson Fishing" class="w-3/4 md:w-1/2 rounded-lg shadow" />
+          <p>Making goals and resolutions can sometimes cause some anxiety, at least for me. This quote was reassuring:</p>
+          <img src="./static/images/toast-to-old-you.jpeg" alt="A Toast to the OLD YOU"
+            class="w-3/4 md:w-1/2 rounded-lg shadow" />
+          <p>Stephanee Eastman read an article about advice given for a new year. She shared hers in a post:</p>
+          <p class="p-4 rounded bg-gradient-to-b from-yellow-100 to-yellow-200 max-w-sm font-semibold text-sm md:text-lg">"Instead of making excuses for why things are the way they are, I decide if that is what I want my life to look like and
+          make different choices."</p>
+          <p>Here are some from the article that stood out to her:</p>
+          <div class="flex flex-col items-center justify-center container mx-auto space-y-3 md:space-y-0 md:grid md:grid-cols-3 md:gap-4">
+            <p class="p-4 rounded bg-gradient-to-b from-orange-100 to-orange-200 font-semibold text-sm md:text-lg">“Keep your 'say-to-do'
+              ratio as close to 100 percent as possible. Strive to do everything you say you will, and do not
+              commit to doing something you aren't likely to be able to do.” <br />— Joshua Swiss, Glasgow</p>
+            <p class="p-4 rounded bg-gradient-to-b from-green-100 to-green-200 font-semibold text-sm md:text-lg">"I was in a vintage shop with my friend Max and saw a sequined top. I remarked to him that I wouldn’t have anywhere
+              to
+              wear such a sparkly top in my current life but that I would love to. He replied simply, 'Choose a different
+              lifestyle.'
+              I've thought about these words every day since."<br />
+              <span style="text-align: right !important;">— Monica Tanouye, London</span>
+            </p>
+
+            <p class="p-4 rounded bg-gradient-to-b from-blue-100 to-blue-200 font-semibold text-sm md:text-lg">“Pay now or pay later. Problems don't go away on their own, so you determine what it will cost you to solve it now
+            versus waiting.” <br />— Jennifer Alberti, Hubertus, Wis.</p>
+          </div>
+        </div>
+        <div class="flex flex-col items-center justify-center space-y-3 pt-8">
+          <h5 class="font-marhey text-sm md:text-xl font-bold">December</h5>
+          <p class="px-4 text-center text-xs md:text-base">We decided to channel Buddy the Elf and spread Christmas cheer, 'by singing loud for all to hear!'</p>
+          <p class="px-4 text-center text-xs md:text-base">Instead of a spoken spiritual thought, we sang the energetic Christmas carol
+            <a href="https://www.churchofjesuschrist.org/music/library/hymns/far-far-away-on-judeas-plains?lang=eng" target="_blank" rel="noopener noreferrer nofollow"
+              class="text-green-700 hover:text-green-800">Far, Far Away on Judea's Plains</a>.
+          </p>
+          <a href="https://www.printables4mom.com/printable-elf-quote-art-print/"
+            rel="noopener noreferrer nofollow"
+            target="_blank"
+            class="flex items-center justify-center w-1/2 lg:w-1/4 mx-auto"
+          >
+            <img src="./static/images/buddy-the-elf.jpeg" alt="Buddy the Elf quote"/>
+          </a>
+        </div>
       </section>
     </main>
 
