--- a/resources.html
+++ b/resources.html
@@ -48,7 +48,7 @@
         <![endif]-->
 
     <header
-      class="fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-marhey text-white md:pt-12">
+      class="z-50 fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-marhey text-white md:pt-12">
       <h1 class="font-marhey font-bold text-center py-4 text-base sm:text-3xl md:text-4xl lg:text-5xl">Game Night/
         Family Home Evening</h1>
       <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">Resources</h2>
@@ -239,7 +239,7 @@
           <img src="./static/images/pres-nelson-fishing.jpeg" alt="President Nelson Fishing" class="w-3/4 md:w-1/2 rounded-lg shadow" />
           <p>Making goals and resolutions can sometimes cause some anxiety, at least for me. This quote was reassuring:</p>
           <img src="./static/images/toast-to-old-you.jpeg" alt="A Toast to the OLD YOU"
-            class="w-3/4 md:w-1/2 rounded-lg shadow" />
+            class="w-3/4 md:w-1/2 rounded-lg shadow grayscale z-0" />
           <p>Stephanee Eastman read an article about advice given for a new year. She shared hers in a post:</p>
           <p class="p-4 rounded bg-gradient-to-b from-yellow-100 to-yellow-200 max-w-sm font-semibold text-sm md:text-lg">"Instead of making excuses for why things are the way they are, I decide if that is what I want my life to look like and
           make different choices."</p>
