--- a/resources.html
+++ b/resources.html
@@ -221,6 +221,13 @@
         <h4 class="font-marhey text-base md:text-2xl font-bold">Ideas for the Spiritual Thought/Message</h4>
         <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
 
+        <div>
+          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">February</h5>
+          <p class="text-center">We talked about the different types of love, and what is the Greatest Love of All.</p>
+          <p class="text-center">We played a game I made out of lyrics of famous love songs, which can be found
+            <a href="https://ethyl2.github.io/fav-games/guess-that-song.html" target="_blank" class="text-green-700 hover:text-green-800">here</a>.</p>
+        </div>
+
         <div class="flex flex-col items-center justify-center space-y-4 pt-4 px-4">
           <h5 class="font-marhey text-sm md:text-xl font-bold">January</h5>
           <p class="px-4 text-center text-xs md:text-base">Well, we were snowed out, darn it, but here's what I'd wanted to share & discuss:</p>
