Adds link to the name game

--- a/resources.html
+++ b/resources.html
@@ -128,6 +128,12 @@
               The Minister's Cat
             </a>
           </li>
+          <li>
+            <a href="https://ethyl2.github.io/fav-games/name-game.html" target="_blank"
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-yellow-100 rounded m-2 hover:bg-yellow-200">
+              The Name Game
+            </a>
+          </li>
         </ul>
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
