Adds playlist for international women's month

--- a/resources.html
+++ b/resources.html
@@ -159,6 +159,14 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For International Women's Month:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/2w6XUvCaixQMutQZ8TIhxu?utm_source=generator" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium">For National Ice Cream Month!?:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/62pygMAFVxd43PZsjnctKm?utm_source=generator" width="100%" height="80"
